--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@prisma/client": "^5.11.0",
     "@tailwindcss/forms": "^0.5.7",
     "next": "14.1.4",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
     "validator": "^13.11.0",
