--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.11.0",
+    "@supabase/supabase-js": "^2.41.1",
     "@tailwindcss/forms": "^0.5.7",
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.1",
