--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.1",
     "next": "14.1.4",
+    "ol": "^9.1.0",
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/openlayers": "^4.6.23",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/validator": "^13.11.9",
