--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "validator": "^13.11.0",
     "zod": "^3.22.4"
   },
