--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.11.0",
     "@supabase/supabase-js": "^2.41.1",
     "@tailwindcss/forms": "^0.5.7",
@@ -20,6 +21,7 @@
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "tailwind-scrollbar-hide": "^1.1.7",
     "validator": "^13.11.0",
     "zod": "^3.22.4"
