--- a/app/manifest.json
+++ b/app/manifest.json
@@ -6,8 +6,7 @@
     {
       "src": "/icons/192-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/icons/512x512.png",
@@ -17,8 +16,8 @@
   ],
   "theme_color": "#4169E1",
   "background_color": "#4169E1",
-  "scope": "/",
-  "start_url": "/",
+  "scope": "./",
+  "start_url": "./",
   "display": "standalone",
   "orientation": "portrait"
 }
