--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.11.0",
+    "@serwist/next": "^9.0.1",
     "@supabase/supabase-js": "^2.41.1",
     "@tailwindcss/forms": "^0.5.7",
     "bcrypt": "^5.1.1",
@@ -38,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
+    "serwist": "^9.0.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "webpack": "^5.91.0"
